# pantheon

./: .gitignore  CMakeLists.txt  README.md
lib/assimp-5.0.1/doc/: dox_cmd.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Triangle.cpp  Triangle.h  main.cpp
src/common/: IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  controls.cpp  controls.h  frag.glsl  shader.cpp  shader.h  utils.cpp  utils.h  vertex_shader.glsl
src/resources/shaders/: frag.glsl  vertex_shader.glsl
